Add a visual if there's no item in certain category Add a feature : view item's files Add litecoin address Fix a problem where the app doesn't fill the collection when login for the first time.

--- a/Cafeine/Cafeine/View/CollectionLibrary.xaml
+++ b/Cafeine/Cafeine/View/CollectionLibrary.xaml
@@ -49,5 +49,24 @@
                             </ItemsPanelTemplate>
                         </GridView.ItemsPanel>-->
         </GridView>
+        <StackPanel Visibility="{x:Bind Vm.ErrorVisibility, Mode=OneWay}"
+                    Orientation="Vertical"
+                    VerticalAlignment="Bottom"
+                    HorizontalAlignment="Center"
+                    Opacity="0.7">
+            <TextBlock Text="Hmm..."
+                       FontSize="32"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf#Montserrat SemiBold" FontWeight="SemiBold" />
+            <TextBlock Text="Why is it empty, I wonder..." Margin="0,0,0,24" HorizontalAlignment="Center"/>
+            <TextBlock Text="0"
+                       Canvas.ZIndex="0"
+                       Grid.Row="0" Grid.Column="0"
+                       VerticalAlignment="Bottom"
+                       HorizontalAlignment="Center"
+                       FontFamily="ms-appx:/Assets/Fonts/Cafeine_font.ttf#Untitled1" 
+                       FontSize="200"/>
+        </StackPanel>
     </Grid>
 </Page>
