--- a/Cafeine/Cafeine/View/ExpandItemDetails.xaml
+++ b/Cafeine/Cafeine/View/ExpandItemDetails.xaml
@@ -147,9 +147,9 @@
                                     <ColumnDefinition Width="0.5*" />
                                     <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
-                                <Button x:Name="PrimaryButton" Content="{TemplateBinding PrimaryButtonText}" IsEnabled="{TemplateBinding IsPrimaryButtonEnabled}" Style="{TemplateBinding PrimaryButtonStyle}" ElementSoundMode="FocusOnly" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,2,0" Grid.Column="0" />
-                                <Button x:Name="SecondaryButton" Content="{TemplateBinding SecondaryButtonText}" IsEnabled="{TemplateBinding IsSecondaryButtonEnabled}" Style="{TemplateBinding SecondaryButtonStyle}" ElementSoundMode="FocusOnly" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Column="1" Grid.ColumnSpan="2" />
-                                <Button x:Name="CloseButton" Content="{TemplateBinding CloseButtonText}" Style="{TemplateBinding CloseButtonStyle}" ElementSoundMode="FocusOnly" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2,0,0,0" Grid.Column="3" />
+                                <Button x:Name="PrimaryButton" Content="{TemplateBinding PrimaryButtonText}" IsEnabled="{TemplateBinding IsPrimaryButtonEnabled}" Style="{TemplateBinding PrimaryButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,2,0" Grid.Column="0" />
+                                <Button x:Name="SecondaryButton" Content="{TemplateBinding SecondaryButtonText}" IsEnabled="{TemplateBinding IsSecondaryButtonEnabled}" Style="{TemplateBinding SecondaryButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Column="1" Grid.ColumnSpan="2" />
+                                <Button x:Name="CloseButton" Content="{TemplateBinding CloseButtonText}" Style="{TemplateBinding CloseButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2,0,0,0" Grid.Column="3" />
                             </Grid>
                         </Grid>
                     </Border>
@@ -159,6 +159,7 @@
     </ContentDialog.Template>
     <ContentDialog.Resources>
         <ResourceDictionary>
+            <m:CollectionListItemClicked x:Key="CLICConv" />
             <Thickness x:Key="ContentDialogBorderWidth">0</Thickness>
             <Thickness x:Key="ContentDialogPadding">0,0,0,24</Thickness>
             <x:Double x:Key="ContentDialogMaxWidth">600</x:Double>
@@ -230,7 +231,13 @@
             <TextBox Width="271" Height="31" Margin="0,4,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource TextBoxStyle}" Text="{x:Bind Vm.EpisodesChapters, Mode=TwoWay}" />
 
             <TextBlock Text="Collection List" Margin="0,8,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings" />
-            <ListView ItemsSource="{x:Bind Vm.Files}" Margin="0,4,24,0">
+            <ListView ItemsSource="{x:Bind Vm.Files}" Margin="0,4,24,0" IsItemClickEnabled="True">
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="ItemClick">
+                        <core:InvokeCommandAction Command="{x:Bind Vm.CollectionListItemClicked}"
+                                                  InputConverter="{StaticResource CLICConv}"/>
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="m:LocalDirectoryFile">
                         <TextBlock Text="{x:Bind Title}" ToolTipService.ToolTip="{x:Bind Title}" />
