--- a/Cafeine/Cafeine/View/HomePage.xaml
+++ b/Cafeine/Cafeine/View/HomePage.xaml
@@ -57,11 +57,9 @@
                                  GroupName="Tab"
                                  IsChecked="{x:Bind Vm.LibraryTabChecked,Mode=TwoWay}"
                                  FontSize="22"
-                                 MinWidth="100"
-                                 FontWeight="Light"
-                                 Template="{StaticResource RadioButtonTemplate}"
+                                 MinWidth="100" Template="{StaticResource RadioButtonTemplate}"
                                  FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-Reguler.ttf#Montserrat"
-                                 CharacterSpacing="16"/>
+                                 CharacterSpacing="16" />
                     <RadioButton x:Name="Schedule"
                                  Content="Schedule"
                                  GroupName="Tab"
